--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,7 +16,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: getcode
-        uses: actions/checkout@V3
+        uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm ci
       - name: Lint
